Foundation for new portfolio

--- a/index.html
+++ b/index.html
@@ -4,11 +4,43 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/6fa073f3b2.js" crossorigin="anonymous"></script>
     <title>Erik Roberts</title>
   </head>
   <body>
     <div id="app">
-
+      <div class="header">
+        <div>
+          <color-track color="0xE4349E" duration="8s" style="transform: translateX(30%)"></color-track>
+          <color-track color="0xE43634" duration="7.5s" style="transform: translateX(10%)"></color-track>
+          <color-track color="0xE48334" duration="8.2s" style="transform: translateX(60%)"></color-track>
+          <color-track color="0xE4C134" duration="8.5s" style="transform: translateX(45%)"></color-track>
+        </div>
+      </div>
+      <div class="content">
+        <div class="row">
+          <div class="col">
+            <h1 class="title">Erik Roberts</h1>
+            <div class="subtitle-row">
+              <h2 class="subtitle">Full Stack Developer</h2>
+              <span class="middot">&middot;</span>
+              <a href="https://github.com/robere2" class="github">
+                <i class="fab fa-github" aria-label="GitHub"></i>
+              </a>
+            </div>
+            <p>
+              Hi, my name is Erik. I'm a software engineer with a particular love for JavaScript and the web.
+              I'm a graduate from the Class of 2022 at Rensselaer Polytechnic Institute.
+            </p>
+            <p>
+              Please feel to reach out to me at my email below.
+            </p>
+          </div>
+          <div class="col">
+            <img class="headshot" alt="A picture of me." src="https://avatars.githubusercontent.com/u/7330807?v=4">
+          </div>
+        </div>
+      </div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
