rename about me section to skills

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <self-intro></self-intro>
         <div class="tabs">
             <a href="#projects"><button type="button">Projects</button></a>
-            <a href="#about"><button type="button">About Me</button></a>
+            <a href="#skills"><button type="button">Skills</button></a>
             <a href="#contact"><button type="button">Contact Me</button></a>
         </div>
         <hr>
         <my-projects id="projects"></my-projects>
-        <about-me id="about"></about-me>
+        <my-skills id="skills"></my-skills>
         <contact-me id="contact"></contact-me>
     </div>
     <my-footer></my-footer>
