Update meta tags for card embedding

--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name='description' content='Software development portfolio for Erik. He is a full stack developer.'>
+    <meta charset="utf-8"/>
+
+    <meta property="og:title" content="Erik Roberts">
+    <meta property="og:url" content="https://ecr.dev/">
+    <meta property="og:image" content="public/headshot.webp">
+    <meta property="description" content="Hi, I'm Erik. I'm a software engineer with a particular love for JavaScript and the web.">
+    <meta property="og:description" content="Hi, I'm Erik. I'm a software engineer with a particular love for JavaScript and the web.">
+
     <link rel="icon" type="image/svg+xml" href="favicon.svg"/>
     <link rel="stylesheet" type="text/css" href="/styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
