--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
 
     <meta property="og:title" content="Erik Roberts">
     <meta property="og:url" content="https://ecr.dev/">
-    <meta property="og:image" content="public/headshot.webp">
+    <meta property="og:image" content="/public/headshot.webp">
     <meta property="description" content="Hi, I'm Erik. I'm a software engineer with a particular love for JavaScript and the web.">
     <meta property="og:description" content="Hi, I'm Erik. I'm a software engineer with a particular love for JavaScript and the web.">
 
