Add reCAPTCHA to contact form. This fixes #19

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg"/>
     <link rel="stylesheet" type="text/css" href="/styles/style.css">
     <script src="https://kit.fontawesome.com/6fa073f3b2.js" defer crossorigin="anonymous"></script>
+    <script src="https://www.google.com/recaptcha/api.js?render=6LdseC4gAAAAAE-pa7N9ABJoLX2G6Z9Vs7tdPTcC"></script>
 
     <title>Erik Roberts</title>
     <meta property="description" content="Hi, I'm Erik. I'm a software engineer with a particular love for JavaScript and the web.">
