--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/6fa073f3b2.js"
       defer
       crossorigin="anonymous"
+      referrerpolicy="origin"
     ></script>
     <script src="https://www.google.com/recaptcha/api.js?render=6LdseC4gAAAAAE-pa7N9ABJoLX2G6Z9Vs7tdPTcC"></script>
 
